argo-cd-system/patch-argocd-repo-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    metadata:
      labels:
        azure.workload.identity/use: "true"
