argo-cd-system/argocd-internet.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocdathome.roelvandegrint.com
  annotations:
    cert-manager.io/issuer: letsencrypt-production-http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - argocdathome.roelvandegrint.com
      secretName: argocdathome-ingress-http-production
  rules:
    - host: argocdathome.roelvandegrint.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
