argo-cd-system/argocd-local.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd.athome
  annotations:
    cert-manager.io/issuer: letsencrypt-production-http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  # tls:
  # - hosts:
  # - argocd.athome.roelvandegrint.com
  # secretName: argocdathome-ingress-http-production
  rules:
    - host: argocd.athome
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
